# python-androidtv-remote

./: LICENSE  README.md  generate_pb.sh  pairingmessage.proto  pyproject.toml  remote.proto  requirements.txt
androidtv_remote/: __init__.py  const.py  pairing.py  remote.py  util.py
androidtv_remote/proto/: pairing_pb2.py  pairing_pb2.pyi
androidtv_remote2/: pairing.py  remote.py  util.py
androidtv_remote2/proto/: remote_pb2.py  remote_pb2.pyi
