[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "androidtv-remote"
version = "1.0.0"
licence = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "cryptography==39.0.0",
    "protobuf==4.21.12"
]

[tool.black]
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true