[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "androidtv-remote2"
version = "1.1.0"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "cryptography==39.0.0",
    "protobuf==4.21.12"
]

[tool.setuptools.packages.find]
include = ["androidtv_remote2"]

[tool.setuptools.package-data]
androidtv_remote2 = ["**/*.pyi"]

[tool.black]
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true